@@ -7,7 +7,7 @@ include $(depth)/make/stepmake.make
 # Should we install these? This should be handled by sysadmin or
 # packager but if she forgets...
 #INSTALLATION_OUT_SUFFIXES=1
-#INSTALLATION_OUT_DIR1=$(datadir)/scripts
+#INSTALLATION_OUT_DIR1=$(local_lilypond_datadir)/scripts
 #INSTALLATION_OUT_FILES1=$(outdir)/lilypond-login $(outdir)/lilypond-profile
 
 all: $(INSTALLATION_FILES)
