@@ -1,5 +1,7 @@
 2002-07-24  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* make/substitute.make (ATVARIABLES): Add local_lilypond_datadir.
+
 	* aclocal.m4: Regenerate.
 	
 	* config.hh.in:
